Fixed stuck

--- a/src/components/random-shayari.css
+++ b/src/components/random-shayari.css
@@ -1,5 +1,5 @@
 .shayari {
-  font-size: 32px;
-  font-family: satisfy;
+  font-size: 42px;
+  font-family: Satisfy, cursive;
   text-align: center;
 }
